service/smokeping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  namespace: smokeping
  labels:
    k8s-app: smokeping
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: smokeping
  type: NodePort
